--- a/week6_Lab/list.html
+++ b/week6_Lab/list.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
     <!-- javascript -->
     <script src="main.js" type="text/javascript"></script>
 </head>
@@ -24,14 +29,16 @@
             <div class="list">
                 <h2 class="list-title">Groceries</h2>
                 <ol id="grocery-list">
-                    <li><input type="checkbox" class="complete-item" onclick="completeListItem(this)">Eggs<button                                       class="delete-item" onclick="deleteListItem(this.parentNode)">X</button></li>
-                    <li><input type="checkbox" class="complete-item" onclick="completeListItem(this)">Milk<button                                       class="delete-item" onclick="deleteListItem(this.parentNode)">X</button></li>
-                    <li><input type="checkbox" class="complete-item" onclick="completeListItem(this)">Cereal<button class="delete-item" onclick="deleteListItem(this.parentNode)">X</button></li>
+                    <li><input type="checkbox" class="complete-item" onclick="completeListItem(this)">Eggs<button class="delete-item">X</button></li>
+                    <li><input type="checkbox" class="complete-item" onclick="completeListItem(this)">Milk<button class="delete-item">X</button></li>
+                    <li><input type="checkbox" class="complete-item" onclick="completeListItem(this)">Cereal<button class="delete-item">X</button></li>
                 </ol>
 
             </div>
             <input id="new-list-item" type="text"></input>
-            <button onclick="addListItem()">Add Item</button>
+
+            <button id="add-item">Add Item</button>
+
         </div>
     </div>
 </body>
