--- a/Assignment5/index.html
+++ b/Assignment5/index.html
@@ -5,7 +5,7 @@
     <title>Mudday Paws Adventure Gear</title>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="styles.css">
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,900" rel="stylesheet"></head>
 
 <body>
 
@@ -22,27 +22,27 @@
 
     <!-- navbar -->
     <nav class="row nav bg-yellow">
-        <a class="nav-item nav-link mr-5" href="#something">Home</a>
-        <a class="nav-item nav-link mr-5" href="#something">New Products</a>
-        <a class="nav-item nav-link mr-5" href="#something">About</a>
-        <a class="nav-item nav-link mr-5" href="#something">Search</a>
-        <a class="nav-item nav-link mr-5" href="#something"><img src="images/question.svg" width="30" height="30"></a>
-        <a class="nav-item nav-link mr-5" href="#something"><img src="images/dialog.svg" width="30" height="30"></a>
-        <a class="nav-item nav-link mr-5" href="#something"><img src="images/cart.svg" width="30" height="30"></a>
-        <a class="nav-item nav-link mr-5" href="#something"><img src="images/account.svg" width="30" height="30"></a>
+        <a class="nav-item nav-link mr-5" href="index.html">Home</a>
+        <a class="nav-item nav-link mr-5" href="products.html">New Products</a>
+        <a class="nav-item nav-link mr-5" href="index.html">About</a>
+        <a class="nav-item nav-link mr-5" href="index.html">Search</a>
+        <a class="nav-item nav-link mr-5" href="index.html"><img src="images/question.svg" width="30" height="30"></a>
+        <a class="nav-item nav-link mr-5" href="index.html"><img src="images/dialog.svg" width="30" height="30"></a>
+        <a class="nav-item nav-link mr-5" href="index.html"><img src="images/cart.svg" width="30" height="30"></a>
+        <a class="nav-item nav-link mr-5" href="index.html"><img src="images/account.svg" width="30" height="30"></a>
 
     </nav>
 
     <!-- icons of cat and dog -->
     <div class="row align-items-center">
-        <div class="col-6">
+        <div class="cat-container col-6"><a href="products.html">
             <p class="display-4 offset-1">Kitty Gear</p>
-            <img src="images/cat.svg" width="300" height="300">
+            <img src="images/cat.svg" width="300" height="300"></a>
         </div> <!-- col 6 -->
 
-        <div class="col-6">
+        <div class="dog-container col-6"><a href="products.html">
             <p class="display-4">Doggy Gear</p>
-            <img src="images/dog.svg" width="300" height="300">
+            <img src="images/dog.svg" width="300" height="300"></a>
         </div> <!-- col 6-->
     </div> <!-- row -->
 
