--- a/Assignment5/products.html
+++ b/Assignment5/products.html
@@ -5,7 +5,7 @@
     <title>Mudday Paws Adventure Gear</title>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="styles.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,900" rel="stylesheet">
 </head>
 
 <div>
@@ -22,39 +22,55 @@
         </div>
 
         <!-- navbar -->
-        <nav class="row nav bg-yellow ">
-            <a class="nav-item nav-link mr-5" href="#something">Home</a>
-            <a class="nav-item nav-link mr-5" href="#something">New Products</a>
-            <a class="nav-item nav-link mr-5" href="#something">About</a>
-            <a class="nav-item nav-link mr-5" href="#something">Search</a>
-            <a class="nav-item nav-link mr-5" href="#something"><img src="images/question.svg" width="30" height="30"></a>
-            <a class="nav-item nav-link mr-5" href="#something"><img src="images/dialog.svg" width="30" height="30"></a>
-            <a class="nav-item nav-link mr-5" href="#something"><img src="images/cart.svg" width="30" height="30"></a>
-            <a class="nav-item nav-link mr-5" href="#something"><img src="images/account.svg" width="30" height="30"></a>
+        <nav class="row nav bg-yellow">
+            <a class="nav-item nav-link mr-5" href="index.html">Home</a>
+            <a class="nav-item nav-link mr-5" href="products.html">New Products</a>
+            <a class="nav-item nav-link mr-5" href="index.html">About</a>
+            <a class="nav-item nav-link mr-5" href="index.html">Search</a>
+            <a class="nav-item nav-link mr-5" href="index.html"><img src="images/question.svg" width="30" height="30"></a>
+            <a class="nav-item nav-link mr-5" href="index.html"><img src="images/dialog.svg" width="30" height="30"></a>
+            <a class="nav-item nav-link mr-5" href="index.html"><img src="images/cart.svg" width="30" height="30"></a>
+            <a class="nav-item nav-link mr-5" href="index.html"><img src="images/account.svg" width="30" height="30"></a>
 
         </nav>
 
         <!-- first row of products -->
-        <div class="row">
-            <div class="col-3"><img class="mx-4 my-4" src="images/harness1.png" width="200" height="200">
-            </div> <!-- image 1 -->
-            <div class="col-3">
-                <img class="mx-4 my-4" src="images/harness1.png" width="200" height="200">
-            </div> <!-- image 1 -->
-            <div class="col-3">
-                <img class="mx-4 my-4" src="images/harness1.png" width="200" height=200">
-            </div> <!-- image 1 -->
+        <div class="row top-row-products text-center">
 
-        </div> <!-- row -->
+            <div class="col-3 border">
+                <a href="detailPage.html">
+                        <img class="mx-4 my-4" src="images/harnessPurple2.png" width="100" height="100">
+                        <p class="product-names" align="center">Harness</p>
+                </a>
+                </div> <!-- image 1 -->
+            <div class="col-3 offset-1 border">
+                <img class="mx-4 my-4" src="images/waterBottle.png" width="100" height="100">
+                <p class="product-names" align="center">Water Bottle</p>
+            </div> <!-- image 2 -->
+
+            <div class="col-3 offset-1 border">
+                <img class="mx-4 my-4" src="images/drinkingContainer.png" width="100" height=100">
+                <p class="product-names" align="center">Water Container</p>
+            </div> <!-- image 2 -->
+        </div><!-- images of products -->
+
+
         <!-- second row of products -->
-        <div class="row">
-            <div class="col-3"><img class="mx-4 my-4" src="images/harness1.png" width="200" height="200">
-            </div> <!-- image 1 -->
-            <div class="col-3">
-                <img class="mx-4 my-4"src="images/harness1.png" width="200" height="200">
-            </div> <!-- image 1 -->
-            <div class="col-3">
-                <img class="mx-4 my-4" src="images/harness1.png" width="200" height=200">
-            </div> <!-- image 1 -->
+        <div class="row bottom-row-products text-center">
+            <div class="col-3 border">
+                <img class="mx-4 my-4" src="images/gpsCollar.png" width="100" height="100">
+                <p class="product-names" align="center">GPS Collar</p>
+            </div> <!-- image 4 -->
+            <div class="col-3 offset-1 border">
+                <img class="mx-4 my-4"src="images/backPack.png" width="100" height="100">
+                <p class="product-names" align="center">Backpack</p>
+            </div> <!-- image 5 -->
+            <div class="col-3 offset-1 border">
+                <img class="mx-4 my-4" src="images/leash.png" width="100" height=100">
+                <p class="product-names" align="center">Leash</p>
+            </div> <!-- image 6 -->
 
-        </div> <!-- row -->
+        </div> <!-- second row of products-->
+
+
+
