--- a/Assignment7/detailPage.html
+++ b/Assignment7/detailPage.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Mudday Paws Adventure Gear</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,900" rel="stylesheet"></head>
+    <script src="script.js" type="text/javascript"></script>
 
 <body>
 
@@ -29,7 +31,8 @@
             <a class="nav-item nav-link mr-5" href="index.html"><img src="images/question.svg" width="30" height="30"></a>
             <a class="nav-item nav-link mr-5" href="index.html"><img src="images/dialog.svg" width="30" height="30"></a>
             <a class="nav-item nav-link mr-5" href="index.html"><img src="images/cart.svg" width="30" height="30"></a>
-            <a class="nav-item nav-link mr-5" href="index.html"><img src="images/account.svg" width="30" height="30"></a>
+            <a class="nav-item nav-link" href="shoppingCart.html"><img src="images/account.svg" width="30" height="30"></a>
+            <a class="nav-item nav-link mr-1" href="shoppingCart.html"><span id="itemsInCart">1</span></a>
 
         </nav>
 
@@ -37,57 +40,38 @@
 
         <div class="row"> <!-- top row -->
             <div class="col-3"> <!-- picture of harness -->
-                <img src="images/harnessPurple2.png" width="300" height="300">
+                <img id="imageSRC" src="images/harnessPurple2.png" width="300" height="300">
             </div> <!-- picture of harness -->
 
             <div class="col-4 offset-1"> <!-- middle column -->
                 <p class="harness-title">Safe Kitty Harness</p>
                 <p class="star"> &#9733; &#9733; &#9733; &#9733; &#9733;</p>
                 <p class="price-font">price:   <span class="price-value">$19.99</span></p>
-                <p class="product-size-font">Size:  <span class="size-of-product">Medium</span></p>
 
-                <div class="row">
-                    <div class="col-4">
-                        <button class="size-button">small</button>
-                    </div>
-
-                    <div class="col-4">
-                        <button class="size-button selected-button">medium</button>
-                    </div>
-
-                    <div class="col-4">
-                        <button class="size-button">Large</button>
-                    </div>
+                <div class="harness-size">
+                <h4>Size</h4>
+                <form id="sizes">
+                <input type="radio" name="size" value="Small">Small<br/>
+                <input type="radio" name="size" value="Medium">Medium<br/>
+                <input type="radio" name="size" value="Large">Large<br/>
+                </form>
                 </div>
 
+                <div>
+                <h4>Color</h4>
+                <form id="harness-colors">
+                <input type="radio" name="color" value="Strawberry" onclick="updateImgSrc()">Strawberry<br>
+                <input type="radio" name="color" value="Fire Orange" onclick="updateImgSrc()">Fire Orange<br>
+                <input type="radio" name="color" value="Crazy Berry" onclick="updateImgSrc()">Crazy Berry<br>
+                </form>
+                </div>
 
-                <div class="row harness-colors">
-                    <div class="col-3">
-                        <button class="color-button">Strawberry</buttonbutton>
-                    </div>
-
-                    <div class="col-2">
-                        <button class="color-button">Black</button>
-                    </div>
-
-                    <div class="col-2">
-                        <button class="color-button selected-button">Berry</button>
-                    </div>
-                    <div class="col-3">
-                        <button class="color-button">Orange</button>
-                    </div>
-                 </div>
             </div><!-- middle column -->
 
-            <div class="col-3 offset-1 align-self-center">
-                <div class="grey-box">
-                    <button class="quantity-button">
-                        Quantity
-                        <p>1</p>
-                    </button>
-                    <button class="add-to-cart-button">
-                        Add to cart
-                    </button>
+            <div class="col-1 align-self-center">
+                <div>
+                    <input type="number" placeholder="Qty" id="qty" min="0"><br><br><br>
+                    <button onclick="saveStatusLocally()" id="addToCart">Add to cart</button>
                 </div>
             </div>
 
@@ -107,11 +91,15 @@
             </div>
         </div>
 
-
-
         </div> <!-- top row -->
 
 
     </div> <!-- container -->
+
+
+<script>
+    onDetailsLoad();
+</script>
+
 </body>
 </html>
