--- a/Assignment7/products.html
+++ b/Assignment7/products.html
@@ -30,7 +30,8 @@
             <a class="nav-item nav-link mr-5" href="index.html"><img src="images/question.svg" width="30" height="30"></a>
             <a class="nav-item nav-link mr-5" href="index.html"><img src="images/dialog.svg" width="30" height="30"></a>
             <a class="nav-item nav-link mr-5" href="index.html"><img src="images/cart.svg" width="30" height="30"></a>
-            <a class="nav-item nav-link mr-5" href="index.html"><img src="images/account.svg" width="30" height="30"></a>
+            <a class="nav-item nav-link" href="shoppingCart.html"><img src="images/account.svg" width="30" height="30"></a>
+            <a class="nav-item nav-link mr-1" href="shoppingCart.html"><span id="itemsInCart">1</span></a>
 
         </nav>
 
