added assignment6 because I had it as assignment 7

--- a/assignment_6/detailPage.html
+++ b/assignment_6/detailPage.html
@@ -32,7 +32,7 @@
             <a class="nav-item nav-link mr-5" href="index.html"><img src="images/dialog.svg" width="30" height="30"></a>
             <a class="nav-item nav-link mr-5" href="index.html"><img src="images/cart.svg" width="30" height="30"></a>
             <a class="nav-item nav-link" href="shoppingCart.html"><img src="images/account.svg" width="30" height="30"></a>
-            <a class="nav-item nav-link mr-1" href="shoppingCart.html"><span id="itemsInCart">1</span></a>
+            <a class="nav-item nav-link mr-1" href="shoppingCart.html"><span id="itemsInCart"></span></a>
 
         </nav>
 
