moved files around into asset folders

--- a/assignment_8/Assests/about.html
+++ b/assignment_8/Assests/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/bootstrap.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 <div class="container">
@@ -14,6 +14,8 @@
         <a class="navbar-brand" href="about.html">About</a>
     </nav>
     <!--End Nav bar-->
+
+<!-- Begin main content for page -->
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-6 text-center">
@@ -23,10 +25,10 @@
     <div class="row justify-content-center">
         <div class="col-6">
             <p class="description">
-                This website aims to give the interested reader a brief, but comprehensive overview of machine learning. Sources are from SAS, a statistical software company that sets the standard for statistical analytics, and from Wikipedia. Special thanks to the statistician Logan Lossing. </p>
+                This website aims to give a brief, but comprehensive overview of machine learning. Sources are from SAS, a statistical software company that sets the standard for statistical analytics, and from Wikipedia. Special thanks to the statistician Logan Lossing. </p>
         </div>
     </div>
-
 </div>
+<!-- End main content for page -->
 </body>
 </html>
