--- a/assignment_8/Assests/about.html
+++ b/assignment_8/Assests/about.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+
+<!-- Uses Bootstrap library for responsive design -->
 <div class="container">
     <!--Begin Nav bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
